[package]
name = "pushbullet_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
magic = "0.16.2"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"